# coq-arrows-theorem

./: .gitignore  Makefile  README.md  _CoqProject  arrow.v  coq-arrows-theorem.opam
.github/workflows/: build.yml
src/: arrow.v  classical.v  options.v  spec.v  tactics.v
